--- a/package.json
+++ b/package.json
@@ -53,7 +53,7 @@
     }
   },
   "engines": {
-    "node": "^10.14.0 || ^8.15.1",
+    "node": "10.1.0",
     "npm": "^6.4.1"
   },
   "dependencies": {
