--- a/package.json
+++ b/package.json
@@ -54,7 +54,7 @@
   },
   "engines": {
     "node": "10.1.0",
-    "npm": "^6.4.1"
+    "npm": "6.0.1"
   },
   "dependencies": {
     "async": "^0.9.2",
