--- a/.github/workflows/azure-webapps.yml
+++ b/.github/workflows/azure-webapps.yml
@@ -32,25 +32,24 @@ jobs:
     - name: npm install
       run: |
         npm install
-    # - name: Zip files
-    #   run: |
-    #     zip -r app.zip . -x ".git/*" ".github/*"
-    - name: 'Deploy to Azure WebApp'
-      uses: azure/webapps-deploy@v2
-      with: 
-        publish-profile: ${{ secrets.AZURE_WEBAPP_PUBLISH_PROFILE }}
-        package: ${{ env.AZURE_WEBAPP_PACKAGE_PATH }}
-    # - name: Azure Login
-    #   uses: azure/login@v1
-    #   with:
-    #     creds: ${{ secrets.AZURE_CREDENTIALS }}
+    - name: Zip files
+      run: |
+        zip -r app.zip . -x ".git/*" ".github/*"
+    # - name: 'Deploy to Azure WebApp'
+    #   uses: azure/webapps-deploy@v2
+    #   with: 
+    #     publish-profile: ${{ secrets.AZURE_WEBAPP_PUBLISH_PROFILE }}
+    #     package: ${{ env.AZURE_WEBAPP_PACKAGE_PATH }}
+    - name: Azure Login
+      uses: azure/login@v1
+      with:
+        creds: ${{ secrets.AZURE_CREDENTIALS }}
     
-    # - name: Azure CLI script
-    #   uses: azure/CLI@v1
-    #   env:
-    #     RESOURCE_GROUP: ${{ secrets.RESOURCE_GROUP }}
-    #     WEBAPP_NAME: ${{ secrets.WEBAPP_NAME }}
-    #   with:
-    #     inlineScript: |
-    #       az webapp config appsettings set --resource-group $RESOURCE_GROUP --name $WEBAPP_NAME --settings WEBSITE_RUN_FROM_PACKAGE="1"
-    #       az webapp deployment source config-zip --resource-group $RESOURCE_GROUP --name $WEBAPP_NAME --src app.zip
+    - name: Azure CLI script
+      uses: azure/CLI@v1
+      env:
+        RESOURCE_GROUP: ${{ secrets.RESOURCE_GROUP }}
+        WEBAPP_NAME: ${{ secrets.WEBAPP_NAME }}
+      with:
+        inlineScript: |
+          az webapp deployment source config-zip --resource-group $RESOURCE_GROUP --name $WEBAPP_NAME --src app.zip
